# agentic-engineering

./: .gitignore  .mcp.json  CLAUDE.md  README.md  SUPERPOWERS-EXPLAINED.md  agentic-engineering-system-prd-v3.md
mcp-server/: README.md  pyproject.toml
mcp-server/examples/: registry.example.json
mcp-server/scripts/: install-supervisor.ps1
mcp-server/src/agentic_mcp/: __init__.py  calibration.py  claims.py  conflicts.py  control_api.py  db.py  dispatch.py  findings.py  headless.py  import_spec.py  init_project.py  loops.py  migrations.py  nodes.py  orchestrate.py  patterns.py  queries.py  registry.py  relations.py  scheduler.py  schema.sql  scope.py  server.py  stability.py  supervisor.py  supervisor_config.py  supervisor_state.py  (+3 more)
mcp-server/tests/: conftest.py  llm_harness.py  test_agent_docs.py  test_calibration.py  test_claims.py  test_conflicts.py  test_control_api.py  test_critical_loop.py  test_db.py  test_dispatch_immutability.py  test_e2e_bootstrap.py  test_findings.py  test_fixtures_phase1.py  test_headless.py  test_headless_loop_e2e.py  test_hud_app.py  test_hud_daemon_client.py  test_hud_graph_source.py  test_hud_packaging.py  test_hud_view_models.py  test_import_spec.py  test_init_project.py  test_install_script.py  test_llm_harness.py  test_migrations.py  test_nodes.py  test_orchestrate.py  test_patterns.py  test_patterns_e2e.py  test_phase1_e2e.py  test_phase2_e2e.py  test_queries.py  test_relations.py  test_retro_layer.py  test_scheduler.py  test_scope.py  test_server.py  test_stability_check.py  test_supervisor.py  test_supervisor_config.py  (+7 more)
(+79 files in other folders)
