[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-mcp"
version = "0.1.0"
description = "Agentic Engineering System graph MCP server (Phase 0)"
requires-python = ">=3.12"
dependencies = [
  "mcp==1.27.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[project.scripts]
agentic-mcp = "agentic_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
